# ELFIO

./: CMakeLists.txt
ELFIOTest/: ELFIOTest.cpp  ELFIOTest.vcxproj  ELFIOTest1.cpp
elfio/: elfio.hpp  elfio_dump.hpp  elfio_dynamic.hpp  elfio_note.hpp  elfio_relocation.hpp  elfio_strings.hpp  elfio_symbols.hpp
examples/ELFDump/: ELFDump.vcxproj
examples/anonymizer/: anonymizer.cpp
examples/elfdump/: ELFDump.vcxproj
examples/writer/: writer.vcxproj
tests/: ELFIOTest.cpp  ELFIOTest.vcxproj  ELFIOTest1.cpp
